[package]
name = "learn_crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crdts = { git = "https://github.com/JLerxky/rust-crdt", branch = "proc_macro" }
crdts_derive = { git = "https://github.com/JLerxky/rust-crdt", branch = "proc_macro" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
